--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "feed": "^0.2.6",
+    "jade": "^1.11.0",
+    "json2xml": "^0.1.2",
     "orm": "^2.1.27",
     "pg": "^4.4.3"
   }
